Fix broken layout in browse page.

--- a/Views/Browse/Browse/Browse.css
+++ b/Views/Browse/Browse/Browse.css
@@ -70,7 +70,7 @@ input.ask-textbox {
 .categories {
     list-style: none;
     padding: 0;
-    width: 300px;
+    width: 290px;
     float: left;
 }
 .categories li {
